refactor: inline isAssignable() — remove dead superclass walk
isAssignable() had a TODO for full hierarchy walk that was never completed
(the break made it dead code). The only working logic was interface matching.
Inlined into findBean() and removed the method.